src/styles/hero.scss
#particles-js canvas {
  display: block;
  background: #060d1b;
  position: fixed;
  z-index: -1;
}

#particles-js {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -10;
  top: 0;
  left: 0;
}

#home {
  display: flex;
  align-items: center;
  padding: 17.75rem 0 14rem 10rem;

  .hello {
    color: #18a0bb;
    font-weight: 300;
    font-size: 1.6rem;
  }

  .first-name {
    margin-top: 4rem;
  }

  .first-name,
  .last-name {
    font-size: 7rem;
    white-space: pre-line;
    text-wrap: break-word;
    line-height: 2.5rem;
    margin-bottom: 3rem;
  }

  .title {
    color: #acb3c0;
    font-weight: 300;
    font-size: 1.8rem;
  }

  button {
    margin-top: 20px;
  }

  .profile-picture {
    width: 250px;
    height: 250px;
    border-radius: 250px;
    margin-left: 10rem;
  }
}

@media screen and (max-width: 992px) {
  #home {
    width: 100%;
    display: grid;
    padding: 4rem;

    .hero-left {
      margin-top: 1rem;
      display: flex;
      flex-direction: column;
      align-items: center;

      .hello {
        margin-bottom: 1rem;
      }

      .first-name {
        margin-bottom: 2rem;
      }

      .last-name {
        margin-bottom: 1rem;
      }

      .first-name,
      .last-name {
        font-size: 4rem;
        margin-top: 0rem;
      }
    }

    .hero-right {
      grid-row: 1;
      grid-column: 1;
      display: flex;
      justify-content: center;

      img {
        margin-left: 0;
      }
    }
  }
}

@media screen and (max-width: 450px) {
  #home {
    padding: 5rem 2rem 2rem 0;

    .first-name {
      margin-bottom: 1rem !important;
    }

    .first-name,
    .last-name {
      font-size: 3rem !important;
    }

    #typeit {
      font-size: 1.2rem;
      margin-top: 0;
      margin-bottom: 0;
    }
  }
}

